grammar/.antlr/lppParser.java
// Generated from c://Users//itrmi//Documents//camilo_andres_gonzalez_castro//git_repositories//lpp-translator//grammar//lpp.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class lppParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TKN_COMMA=1, TKN_COLON=2, TKN_OPENING_PAR=3, TKN_CLOSING_PAR=4, TKN_ASSIGN=5, 
		TKN_OPENING_BRA=6, TKN_CLOSING_BRA=7, TKN_PERIOD=8, TKN_SINGLE_QUOTE=9, 
		TKN_DOUBLE_QUOTE=10, REGISTRO=11, FIN=12, FUNCION=13, VAR=14, PROCEDIMIENTO=15, 
		INICIO=16, ESCRIBA=17, LEA=18, LLAMAR=19, SI=20, ENTONCES=21, SINO=22, 
		CASO=23, REPITA=24, HASTA=25, PARA=26, MIENTRAS=27, RETORNE=28, ENTERO=29, 
		REAL=30, BOOLEANO=31, CARACTER=32, CADENA=33, ARREGLO=34, HAGA=35, DE=36, 
		OPERATOR=37, TKN_PLUS=38, TKN_MINUS=39, TKN_TIMES=40, TKN_DIV=41, TKN_POWER=42, 
		TKN_EQUAL=43, TKN_NEQ=44, TKN_LESS=45, TKN_LEQ=46, TKN_GREATER=47, TKN_GEQ=48, 
		TKN_DIV_INT=49, TKN_MOD=50, TKN_AND=51, TKN_OR=52, CHAR_LITERAL=53, CADENA_LITERAL=54, 
		ENTERO_LITERAL=55, REAL_LITERAL=56, BOOLEANO_LITERAL=57, VERDADERO=58, 
		FALSO=59, ID=60, SHORT_COMMENT=61, LONG_COMMENT=62, TABS=63, NUEVA_LINEA=64;
	public static final int
		RULE_s = 0, RULE_dec_registros = 1, RULE_dec_variables = 2, RULE_dec_variables_int = 3, 
		RULE_dec_variable_int = 4, RULE_dec_variable = 5, RULE_dec_sig_variable = 6, 
		RULE_dec_funciones = 7, RULE_dec_funcion = 8, RULE_parametros = 9, RULE_parametro_sig = 10, 
		RULE_dec_var = 11, RULE_dec_procedimiento = 12, RULE_parametros_proc = 13, 
		RULE_parametro_sig_proc = 14, RULE_prog_proc = 15, RULE_prog = 16, RULE_prog_main = 17, 
		RULE_cmds = 18, RULE_escriba = 19, RULE_lea = 20, RULE_exp_lea = 21, RULE_llamar = 22, 
		RULE_si = 23, RULE_si_aux = 24, RULE_sino = 25, RULE_caso = 26, RULE_opcion = 27, 
		RULE_opcion_exp = 28, RULE_caso_sino = 29, RULE_repita = 30, RULE_para = 31, 
		RULE_mientras = 32, RULE_asigne = 33, RULE_retorne = 34, RULE_exp = 35, 
		RULE_op_o = 36, RULE_op_y = 37, RULE_op_div = 38, RULE_op_mod = 39, RULE_operator = 40, 
		RULE_literal = 41, RULE_tipo = 42, RULE_tipo_variable = 43, RULE_cadena = 44, 
		RULE_arreglo = 45, RULE_arreglo_variable = 46, RULE_exp_list = 47;
	private static String[] makeRuleNames() {
		return new String[] {
			"s", "dec_registros", "dec_variables", "dec_variables_int", "dec_variable_int", 
			"dec_variable", "dec_sig_variable", "dec_funciones", "dec_funcion", "parametros", 
			"parametro_sig", "dec_var", "dec_procedimiento", "parametros_proc", "parametro_sig_proc", 
			"prog_proc", "prog", "prog_main", "cmds", "escriba", "lea", "exp_lea", 
			"llamar", "si", "si_aux", "sino", "caso", "opcion", "opcion_exp", "caso_sino", 
			"repita", "para", "mientras", "asigne", "retorne", "exp", "op_o", "op_y", 
			"op_div", "op_mod", "operator", "literal", "tipo", "tipo_variable", "cadena", 
			"arreglo", "arreglo_variable", "exp_list"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "':'", "'('", "')'", "'<-'", "'['", "']'", "'.'", "'''", 
			"'\"'", null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "'+'", "'-'", "'*'", "'/'", "'^'", "'='", "'<>'", 
			"'<'", "'<='", "'>'", "'>='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TKN_COMMA", "TKN_COLON", "TKN_OPENING_PAR", "TKN_CLOSING_PAR", 
			"TKN_ASSIGN", "TKN_OPENING_BRA", "TKN_CLOSING_BRA", "TKN_PERIOD", "TKN_SINGLE_QUOTE", 
			"TKN_DOUBLE_QUOTE", "REGISTRO", "FIN", "FUNCION", "VAR", "PROCEDIMIENTO", 
			"INICIO", "ESCRIBA", "LEA", "LLAMAR", "SI", "ENTONCES", "SINO", "CASO", 
			"REPITA", "HASTA", "PARA", "MIENTRAS", "RETORNE", "ENTERO", "REAL", "BOOLEANO", 
			"CARACTER", "CADENA", "ARREGLO", "HAGA", "DE", "OPERATOR", "TKN_PLUS", 
			"TKN_MINUS", "TKN_TIMES", "TKN_DIV", "TKN_POWER", "TKN_EQUAL", "TKN_NEQ", 
			"TKN_LESS", "TKN_LEQ", "TKN_GREATER", "TKN_GEQ", "TKN_DIV_INT", "TKN_MOD", 
			"TKN_AND", "TKN_OR", "CHAR_LITERAL", "CADENA_LITERAL", "ENTERO_LITERAL", 
			"REAL_LITERAL", "BOOLEANO_LITERAL", "VERDADERO", "FALSO", "ID", "SHORT_COMMENT", 
			"LONG_COMMENT", "TABS", "NUEVA_LINEA"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "lpp.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public lppParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SContext extends ParserRuleContext {
		public Dec_registrosContext dec_registros() {
			return getRuleContext(Dec_registrosContext.class,0);
		}
		public Dec_variablesContext dec_variables() {
			return getRuleContext(Dec_variablesContext.class,0);
		}
		public Dec_funcionesContext dec_funciones() {
			return getRuleContext(Dec_funcionesContext.class,0);
		}
		public Prog_mainContext prog_main() {
			return getRuleContext(Prog_mainContext.class,0);
		}
		public SContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_s; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lppListener ) ((lppListener)listener).enterS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lppListener ) ((lppListener)listener).exitS(this);
		}
	}

	public final SContext s() throws RecognitionException {
		SContext _localctx = new SContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_s);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			dec_registros();
			setState(97);
			dec_variables();
			setState(98);
			dec_funciones();
			setState(99);
			prog_main();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Dec_registrosContext extends ParserRuleContext {
		public List<TerminalNode> REGISTRO() { return getTokens(lppParser.REGISTRO); }
		public TerminalNode REGISTRO(int i) {
			return getToken(lppParser.REGISTRO, i);
		}
		public List<TerminalNode> ID() { return getTokens(lppParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(lppParser.ID, i);
		}
		public List<Dec_variables_intContext> dec_variables_int() {
			return getRuleContexts(Dec_variables_intContext.class);
		}
		public Dec_variables_intContext dec_variables_int(int i) {
			return getRuleContext(Dec_variables_intContext.class,i);
		}
		public List<TerminalNode> FIN() { return getTokens(lppParser.FIN); }
		public TerminalNode FIN(int i) {
			return getToken(lppParser.FIN, i);
		}
		public Dec_registrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec_registros; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lppListener ) ((lppListener)listener).enterDec_registros(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lppListener ) ((lppListener)listener).exitDec_registros(this);
		}
	}

	public final Dec_registrosContext dec_registros() throws RecognitionException {
		Dec_registrosContext _localctx = new Dec_registrosContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dec_registros);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==REGISTRO) {
				{
				{
				setState(101);
				match(REGISTRO);
				setState(102);
				match(ID);
				setState(103);
				dec_variables_int();
				setState(104);
				match(FIN);
				setState(105);
				match(REGISTRO);
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Dec_variablesContext extends ParserRuleContext {
		public List<Dec_variableContext> dec_variable() {
			return getRuleContexts(Dec_variableContext.class);
		}
		public Dec_variableContext dec_variable(int i) {
			return getRuleContext(Dec_variableContext.class,i);
		}
		public Dec_variablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec_variables; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lppListener ) ((lppListener)listener).enterDec_variables(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lppListener ) ((lppListener)listener).exitDec_variables(this);
		}
	}

	public final Dec_variablesContext dec_variables() throws RecognitionException {
		Dec_variablesContext _localctx = new Dec_variablesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dec_variables);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1152921538429714432L) != 0)) {
				{
				{
				setState(112);
				dec_variable();
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Dec_variables_intContext extends ParserRuleContext {
		public List<Dec_variable_intContext> dec_variable_int() {
			return getRuleContexts(Dec_variable_intContext.class);
		}
		public Dec_variable_intContext dec_variable_int(int i) {
			return getRuleContext(Dec_variable_intContext.class,i);
		}
		public Dec_variables_intContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec_variables_int; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lppListener ) ((lppListener)listener).enterDec_variables_int(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lppListener ) ((lppListener)listener).exitDec_variables_int(this);
		}
	}

	public final Dec_variables_intContext dec_variables_int() throws RecognitionException {
		Dec_variables_intContext _localctx = new Dec_variables_intContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_dec_variables_int);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1152921538429714432L) != 0)) {
				{
				{
				setState(118);
				dec_variable_int();
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Dec_variable_intContext extends ParserRuleContext {
		public Tipo_variableContext tipo_variable() {
			return getRuleContext(Tipo_variableContext.class,0);
		}
		public TerminalNode ID() { return getToken(lppParser.ID, 0); }
		public List<Dec_sig_variableContext> dec_sig_variable() {
			return getRuleContexts(Dec_sig_variableContext.class);
		}
		public Dec_sig_variableContext dec_sig_variable(int i) {
			return getRuleContext(Dec_sig_variableContext.class,i);
		}
		public Dec_variable_intContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec_variable_int; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lppListener ) ((lppListener)listener).enterDec_variable_int(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lppListener ) ((lppListener)listener).exitDec_variable_int(this);
		}
	}

	public final Dec_variable_intContext dec_variable_int() throws RecognitionException {
		Dec_variable_intContext _localctx = new Dec_variable_intContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dec_variable_int);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			tipo_variable();
			setState(125);
			match(ID);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TKN_COMMA) {
				{
				{
				setState(126);
				dec_sig_variable();
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Dec_variableContext extends ParserRuleContext {
		public Tipo_variableContext tipo_variable() {
			return getRuleContext(Tipo_variableContext.class,0);
		}
		public TerminalNode ID() { return getToken(lppParser.ID, 0); }
		public List<Dec_sig_variableContext> dec_sig_variable() {
			return getRuleContexts(Dec_sig_variableContext.class);
		}
		public Dec_sig_variableContext dec_sig_variable(int i) {
			return getRuleContext(Dec_sig_variableContext.class,i);
		}
		public Dec_variableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lppListener ) ((lppListener)listener).enterDec_variable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lppListener ) ((lppListener)listener).exitDec_variable(this);
		}
	}

	public final Dec_variableContext dec_variable() throws RecognitionException {
		Dec_variableContext _localctx = new Dec_variableContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dec_variable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			tipo_variable();
			setState(133);
			match(ID);
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TKN_COMMA) {
				{
				{
				setState(134);
				dec_sig_variable();
				}
				}
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Dec_sig_variableContext extends ParserRuleContext {
		public TerminalNode TKN_COMMA() { return getToken(lppParser.TKN_COMMA, 0); }
		public TerminalNode ID() { return getToken(lppParser.ID, 0); }
		public Dec_sig_variableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec_sig_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lppListener ) ((lppListener)listener).enterDec_sig_variable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lppListener ) ((lppListener)listener).exitDec_sig_variable(this);
		}
	}

	public final Dec_sig_variableContext dec_sig_variable() throws RecognitionException {
		Dec_sig_variableContext _localctx = new Dec_sig_variableContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_dec_sig_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(TKN_COMMA);
			setState(141);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Dec_funcionesContext extends ParserRuleContext {
		public List<Dec_funcionContext> dec_funcion() {
			return getRuleContexts(Dec_funcionContext.class);
		}
		public Dec_funcionContext dec_funcion(int i) {
			return getRuleContext(Dec_funcionContext.class,i);
		}
		public List<Dec_procedimientoContext> dec_procedimiento() {
			return getRuleContexts(Dec_procedimientoContext.class);
		}
		public Dec_procedimientoContext dec_procedimiento(int i) {
			return getRuleContext(Dec_procedimientoContext.class,i);
		}
		public Dec_funcionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec_funciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lppListener ) ((lppListener)listener).enterDec_funciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lppListener ) ((lppListener)listener).exitDec_funciones(this);
		}
	}

	public final Dec_funcionesContext dec_funciones() throws RecognitionException {
		Dec_funcionesContext _localctx = new Dec_funcionesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_dec_funciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNCION || _la==PROCEDIMIENTO) {
				{
				setState(145);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case FUNCION:
					{
					setState(143);
					dec_funcion();
					}
					break;
				case PROCEDIMIENTO:
					{
					setState(144);
					dec_procedimiento();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Dec_funcionContext extends ParserRuleContext {
		public TerminalNode FUNCION() { return getToken(lppParser.FUNCION, 0); }
		public TerminalNode ID() { return getToken(lppParser.ID, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public TerminalNode TKN_COLON() { return getToken(lppParser.TKN_COLON, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public Dec_variablesContext dec_variables() {
			return getRuleContext(Dec_variablesContext.class,0);
		}
		public ProgContext prog() {
			return getRuleContext(ProgContext.class,0);
		}
		public Dec_funcionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec_funcion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lppListener ) ((lppListener)listener).enterDec_funcion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lppListener ) ((lppListener)listener).exitDec_funcion(this);
		}
	}

	public final Dec_funcionContext dec_funcion() throws RecognitionException {
		Dec_funcionContext _localctx = new Dec_funcionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_dec_funcion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(FUNCION);
			setState(151);
			match(ID);
			setState(152);
			parametros();
			setState(153);
			match(TKN_COLON);
			setState(154);
			tipo();
			setState(155);
			dec_variables();
			setState(156);
			prog();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametrosContext extends ParserRuleContext {
		public TerminalNode TKN_OPENING_PAR() { return getToken(lppParser.TKN_OPENING_PAR, 0); }
		public Dec_varContext dec_var() {
			return getRuleContext(Dec_varContext.class,0);
		}
		public TerminalNode TKN_CLOSING_PAR() { return getToken(lppParser.TKN_CLOSING_PAR, 0); }
		public List<Parametro_sigContext> parametro_sig() {
			return getRuleContexts(Parametro_sigContext.class);
		}
		public Parametro_sigContext parametro_sig(int i) {
			return getRuleContext(Parametro_sigContext.class,i);
		}
		public ParametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametros; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lppListener ) ((lppListener)listener).enterParametros(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lppListener ) ((lppListener)listener).exitParametros(this);
		}
	}

	public final ParametrosContext parametros() throws RecognitionException {
		ParametrosContext _localctx = new ParametrosContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_parametros);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TKN_OPENING_PAR) {
				{
				setState(158);
				match(TKN_OPENING_PAR);
				setState(159);
				dec_var();
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==TKN_COMMA) {
					{
					{
					setState(160);
					parametro_sig();
					}
					}
					setState(165);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(166);
				match(TKN_CLOSING_PAR);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
